<resources>
    <string name="app_name">My Music Application</string>
    <string name="My_Playlist">My Playlist</string>
    <string name="guide_line"><![CDATA[Thank you for using our product. To fully use the system, please go to Settings -> Apps -> My Music Application -> Permissions -> Denied -> Allow access to media only]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list_is_empty">Oops, there is no song in your list. Please download some to have best experience.</string>
    <string name="notification_channel_name">Music Notification</string>
    <string name="notification_title">Notification title</string>
    <string name="notification_content">The current song has finished playing. Tap me to open the player!</string>
    <string name="request_permission_message">You need to grant this app permission to read your external storage. This is needed to access your music files.</string>
    <string name="request_permission_button">Continue</string>
    <string name="denied_permission_messsage">You rejected the permission request, and the app cannot work without it.You will need to reinstall the app or change this setting manually.</string>
    <string name="My_Playlists">My Playlists</string>
    <string name="view_all">View All</string>
    <string name="add_play_list_name">Add playlist name</string>
    <string name="choose_song">Choose song</string>
    <string name="Playlists">Playlists</string>
    <string name="home">Home</string>
    <string name="songs">Songs</string>
    <string name="hot_recommended">Hot recommended</string>
    <string name="playlist">Playlist</string>
    <string name="recently_played">Recently Played</string>
    <string name="song_no">"328\nSongs"</string>
    <string name="artist_no">87\nArtists</string>
    <string name="album_no">52\nAlbums</string>
    <string name="setting">Setting</string>
    <string name="search_album_song">search album song</string>
    <string name="all_song">All songs</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="genres">Genres</string>
    <string name="my_top_tracks">My Top Tracks</string>
    <string name="latest_added">Latest Added</string>
    <string name="history">History</string>
    <string name="favourites">Favourites</string>
    <string name="play">Play</string>
    <string name="play_next">Play next</string>
    <string name="add_to_playing_queue">Add to playing queue</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="rename">Rename</string>
    <string name="tag_editor">Tag editor</string>
    <string name="go_to_artist">Go to artist</string>
    <string name="delete_from_device">Delete from device</string>
    <string name="share">Share</string>
    <string name="display">Display</string>
    <string name="audio">Audio</string>
    <string name="head_set">Headset</string>
    <string name="lockscreen">LockScreen</string>
    <string name="advanced">Advanced</string>
    <string name="other">Other</string>
    <string name="album_details">Album Details</string>
    <string name="music">Muzic</string>
    <string name="themes">Themes</string>
    <string name="ringtone_cutter">Ringtone Cutter</string>
    <string name="sleep_time">Sleep Time</string>
    <string name="equliser">Equliser</string>
    <string name="drive_mode">Drive Mode</string>
    <string name="hidden_folder">Hidden Folder</string>
    <string name="scan_media">Scan Media</string>
</resources>